==> chrisjanbothma79/esphome/esphome/components/wifi/wifi_component_rp2040.cpp <==
#include "wifi_component.h"
#include "lwip/dns.h"
#include "lwip/err.h"
#include "lwip/netif.h"
#include <AddrList.h>
#include "esphome/core/application.h"
#include "esphome/core/hal.h"
#include "esphome/core/helpers.h"
#include "esphome/core/log.h"
#include "esphome/core/util.h"

bool WiFiComponent::wifi_mode_(optional<bool> sta, optional<bool> ap) {
#ifndef USE_RP2040_ESPHOST
  if (sta.has_value()) {
    if (sta.value()) {
      cyw43_wifi_set_up(&cyw43_state, CYW43_ITF_STA, true, CYW43_COUNTRY_WORLDWIDE);
    }
  }
  if (ap.has_value()) {
    if (ap.value()) {
      cyw43_wifi_set_up(&cyw43_state, CYW43_ITF_AP, true, CYW43_COUNTRY_WORLDWIDE);
    }
  }
  return true;
#else
  uint8_t current_mode = WiFi.getMode();
  bool current_sta = current_mode & WIFI_STA;
  bool current_ap = current_mode & WIFI_AP;
  bool enable_sta = sta.value_or(current_sta);
  bool enable_ap = ap.value_or(current_ap);
  if (current_sta == enable_sta && current_ap == enable_ap)
    return true;

  uint8_t mode = 0;
  if (enable_sta)
    mode |= WIFI_STA;
  if (enable_ap)
    mode |= WIFI_AP;
  WiFi.mode(static_cast<WiFiMode_t>(mode));
  return true;
#endif
}

bool WiFiComponent::wifi_apply_power_save_() {
#ifndef USE_RP2040_ESPHOST
  uint32_t pm;
  switch (this->power_save_) {
    case WIFI_POWER_SAVE_NONE:
      pm = CYW43_PERFORMANCE_PM;
      break;
    case WIFI_POWER_SAVE_LIGHT:
      pm = CYW43_DEFAULT_PM;
      break;
    case WIFI_POWER_SAVE_HIGH:
      pm = CYW43_AGGRESSIVE_PM;
      break;
  }
  int ret = cyw43_wifi_pm(&cyw43_state, pm);
  return ret == 0;
#else
  return false;
#endif
}

WiFiSTAConnectStatus WiFiComponent::wifi_sta_connect_status_() {
#ifndef USE_RP2040_ESPHOST
  int status = cyw43_tcpip_link_status(&cyw43_state, CYW43_ITF_STA);
  switch (status) {
    case CYW43_LINK_JOIN:
    case CYW43_LINK_NOIP:
      return WiFiSTAConnectStatus::CONNECTING;
    case CYW43_LINK_UP:
      return WiFiSTAConnectStatus::CONNECTED;
    case CYW43_LINK_FAIL:
    case CYW43_LINK_BADAUTH:
      return WiFiSTAConnectStatus::ERROR_CONNECT_FAILED;
    case CYW43_LINK_NONET:
      return WiFiSTAConnectStatus::ERROR_NETWORK_NOT_FOUND;
  }
  return WiFiSTAConnectStatus::IDLE;
#else
  auto status = WiFi.status();
  if (status == WL_CONNECTED) {
    return WiFiSTAConnectStatus::CONNECTED;
  } else if (status == WL_CONNECT_FAILED || status == WL_CONNECTION_LOST) {
    return WiFiSTAConnectStatus::ERROR_CONNECT_FAILED;
  } else if (status == WL_NO_SSID_AVAIL) {
    return WiFiSTAConnectStatus::ERROR_NETWORK_NOT_FOUND;
  } else if (s_sta_connecting) {
    return WiFiSTAConnectStatus::CONNECTING;
  }
  return WiFiSTAConnectStatus::IDLE;
#endif
}

network::IPAddress WiFiComponent::wifi_soft_ap_ip() { return {(const ip_addr_t *) WiFi.localIP()}; }

bool WiFiComponent::wifi_disconnect_() {
#ifndef USE_RP2040_ESPHOST
  int err = cyw43_wifi_leave(&cyw43_state, CYW43_ITF_STA);
  return err == 0;
#else
  return WiFi.disconnect() == WL_DISCONNECTED;
#endif
}

network::IPAddresses WiFiComponent::wifi_sta_ip_addresses() {
  network::IPAddresses addresses;
  uint8_t index = 0;
  for (auto addr : addrList) {
    addresses[index++] = addr.ipFromNetifNum();
  }
  return addresses;
}

void WiFiComponent::wifi_pre_setup_() {
#ifdef USE_RP2040_ESPHOST
  // check if initHW() returns false by verifying the esp-hosted MAC address
  uint8_t mac_addr[6], mac_invalid[6];
  memset(mac_addr, 0xAA, 6);
  memset(mac_invalid, 0xAA, 6);
  // disable the watchdog temporarily (the connection check takes time)
  watchdog_disable();
  // communicate with esp-hosted and get the MAC address
  WiFi.macAddress(mac_addr);
#if USE_RP2040_WATCHDOG_TIMEOUT > 0
  watchdog_enable(USE_RP2040_WATCHDOG_TIMEOUT, false);
#else
  watchdog_disable();
#endif
  // if it's unchanged, an error occurred
  if (memcmp(mac_addr, mac_invalid, 6) == 0) {
    ESP_LOGE(TAG, "Couldn't initialize ESPHost, check the connections");
    this->mark_failed("ESPHost init failed");
  }
#endif
}
